--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 
 Author: Muthuraja Ramachandran
 
-# BDD Automation using Cypress, Cucumber Javascrupt and Page Object Model
+# BDD Automation using Cypress, Cucumber Javascript and Page Object Model
 
 
 # Run : npm install npx -g
